# github-trend-analyzer-delivery

./: .gitignore  AGENT_CHARTER.md  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: __init__.py  collector.py  entities.py  insight.py  llm.py  pipeline.py  processor.py  sample_data.py  scorer.py  storage.py  validator.py
docs/: DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  VALIDATION_RULES.md
schemas/: opportunity_analysis.schema.json
tests/: test_api.py  test_insight_llm.py  test_scorer.py  test_validator.py
tools/: validate_opportunity_output.py
web/: app.js  index.html  styles.css
